--- a/config.json
+++ b/config.json
@@ -1,12 +1,9 @@
 {
    "chainName":"hello-world",
    "deployWaitTime":"60",
-   "hsbn_cert_path": "/certs/blockchain-cert.pem",
-   "x86_cert_path": "/certs/peer/cert.pem",
    "user": {
-	"username": "JohnDoe1",
-        "account" : "group1",
-        "affiliation" : "00001"
+	"username": "JohnDoe",
+        "affiliation" : "group1"
    },
    "deployRequest":{
       "chaincodePath":"chaincode",
